--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
-  <maven.compiler.sources>1/8</maven.compiler.sources>
+  <maven.compiler.sources>1.8</maven.compiler.sources>
   <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
