properties tag change

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 
   <properties>
-  <maven.compiler.sources>1.8</maven.compiler.sources>
+  <maven.compiler.source>1.8</maven.compiler.source>
   <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
