--- a/pom.xml
+++ b/pom.xml
@@ -92,12 +92,11 @@
 </build>
 
 <!-- profiling s used to execute the specific suite with the help of unique id-->
+ 
  <profiles> 
- 
- 
+  
 <profile>
 <id>Smoke</id>
-
 <build>
   <plugins>
       <plugin>
@@ -114,6 +113,25 @@
 </build>
 </profile>
 
+
+<profile>
+<id>Regression</id>
+
+<build>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>Regression.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+</build>
+</profile>
 
 </profiles>
   
